(Stable) Some z-indexes fixed

--- a/src/components/(HUD)/components/SideBar/styles.module.css
+++ b/src/components/(HUD)/components/SideBar/styles.module.css
@@ -1,5 +1,5 @@
 .sideBarActivationArea {
-	z-index: 10;
+	/* z-index: 10; */
 	position: fixed;
 	max-height: 100vh;
 	background-color: transparent;
